--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     // if none of the specified keys are matched, the '*' key is used
     commands: [
       [null, 'Google', '*', 'https://encrypted.google.com', '/search?q={}', '#111'],
-      ['Work', 'Analytics', 'a', 'https://analytics.google.com', null, '#ff6d00'],
+      ['Work', 'Job', 'J', 'http://www.snagajob.com/member', null, '#F28D1B'],
       ['Work', 'GitHub', 'g', 'https://github.com', '/search?q={}', '#333'],
-      ['Work', 'Inbox', 'I', 'https://inbox.google.com', '/search/{}', '#4285f4'],
-      ['Work', 'Keep', 'k', 'https://keep.google.com', '/#search/text={}', '#fb0'],
-      ['Look', 'Codrops', 'C', 'https://tympanus.net/codrops', '?search-type=posts&s={}', '#0099cc'],
+      ['Work', 'Indeed', 'I', 'https://www.indeed.com/', '/search/{}', '#538FD2'],
+      ['Work', 'Mail', 'm', 'https://mail.google.com/mail/u/0/#in', '/#search/text={}', '#DC4861'],
+      ['Look', 'wg', '/', 'http://boards.4chan.org/wg/', null, '#00A000'],
       ['Look', 'Hunt', 'H', 'https://www.producthunt.com', '/search?q={}', '#da552f'],
       ['Look', 'Photos', 'P', 'https://photos.google.com', '/search/{}', '#34a853'],
       ['Look', 'Unsplash', 'u', 'https://unsplash.com/new', '/search/{}', '#000'],
@@ -19,7 +19,7 @@
       ['Lurk', 'Instagram', 'i', 'https://www.instagram.com', null, '#833ab4'],
       ['Lurk', 'Reddit', 'r', 'https://www.reddit.com', '/search?q={}', '#5f99cf'],
       ['Lurk', 'Twitter', 't', 'https://twitter.com', '/search?q={}', '#1da1f2'],
-      ['Listen', 'Hypem', 'h', 'https://hypem.com/popular', '/search/{}', '#83c441'],
+      ['Listen', 'Bandcamp', 'b', 'https://bandcamp.com/Krag', '/search/{}', '#008B8B'],
       ['Listen', 'Line Radio', 'l', 'https://linerad.io', '/#{}', '#39CCCC'],
       ['Listen', 'Pandora', 'p', 'https://www.pandora.com', '/artist/{}', '#005483'],
       ['Listen', 'SoundCloud', 's', 'https://soundcloud.com/discover', '/search?q={}', '#ff8800'],
@@ -29,8 +29,10 @@
       ['Watch', 'YouTube', 'y', 'https://youtube.com/feed/subscriptions', '/results?search_query={}', '#cd201f'],
       ['Download', '7digital', '7', 'https://us.7digital.com', '/search?q={}', '#07606e'],
       ['Download', 'Sky Torrents', 'S', 'https://skytorrents.in', '/search/all/ed/1?q={}', '#00d1b2'],
-      ['Download', 'Pirate Bay', 'b', 'https://thepiratebay.org', '/search/{}', '#4c4132'],
+      ['Download', 'Pirate Bay', 'B', 'https://thepiratebay.org', '/search/{}', '#4c4132'],
       ['Download', 'YTS', 'Y', 'https://yts.gs/browse-movies/all/1080p/all/7/latest', '/browse-movies/{}', '#2f2f2f'],
+      ['Entertain', 'Warlight', 'W', 'https://www.warlight.net/MultiPlayer/', null, '#EF0B0B'],
+      ['Entertain', 'Mxrp', 'M', 'https://msparp.com/groups', null, '#18D07A'],
     ],
 
     // give suggestions as you type
