--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       ['Download', 'Sky Torrents', 'S', 'https://skytorrents.in', '/search/all/ed/1?q={}', '#00d1b2'],
       ['Download', 'Pirate Bay', 'B', 'https://thepiratebay.org', '/search/{}', '#4c4132'],
       ['Download', 'YTS', 'Y', 'https://yts.gs/browse-movies/all/1080p/all/7/latest', '/browse-movies/{}', '#2f2f2f'],
-      ['Entertain', 'Warlight', 'W', 'https://www.warlight.net/MultiPlayer/', null, '#EF0B0B'],
-      ['Entertain', 'Mxrp', 'M', 'https://msparp.com/groups', null, '#18D07A'],
+	  ['Entertain', 'Warlight', 'W', 'https://www.warlight.net/MultiPlayer/', null, '#EF0B0B'],
+	  ['Entertain', 'Mxrp', 'M', 'https://msparp.com/groups', null, '#18D07A'],
     ],
 
     // give suggestions as you type
@@ -64,7 +64,7 @@
     instantRedirect: false,
 
     // open queries in a new tab
-    newTab: true,
+    newTab: false,
 
     // dynamic background colors when command domains are matched
     colors: true,
